[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gpio-pmtiles"
version = "0.1.0"
description = "PMTiles generation plugin for geoparquet-io"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Chris Holmes", email = "cholmes@9eo.org" }
]
keywords = ["geoparquet", "pmtiles", "vector-tiles", "tippecanoe"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "geoparquet-io>=0.8.0",
    "click>=8.0.0",
]

[project.entry-points."geoparquet_io.plugins"]
pmtiles = "gpio_pmtiles.plugin:register_commands"

[project.urls]
"Homepage" = "https://github.com/geoparquet/gpio-pmtiles"
"Bug Tracker" = "https://github.com/geoparquet/gpio-pmtiles/issues"
"Documentation" = "https://geoparquet.io/"
"Source" = "https://github.com/geoparquet/gpio-pmtiles"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["gpio_pmtiles"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = ["-v", "--tb=short"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "C901"]

[tool.ruff.lint.isort]
known-first-party = ["gpio_pmtiles"]
